--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fridge Finder</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
+
 <body>
     <header>
         <nav>
-            <a href="index.html" class="menu-item logo"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
+            <a href="index.html" class="menu-item logo"><img src="img/fridge-icon.png" class="logo"
+                    alt="fridge icon"></a>
             <div class="desktop-menu">
                 <a href="inventory.html" class="menu-item">Inventory</a>
 
@@ -33,5 +36,7 @@
             <h1 class="shelf-name">Add Food</h1>
         </div>
     </main>
+    <script src="/js/index.js"></script>
 </body>
+
 </html>
