--- a/inventory.html
+++ b/inventory.html
@@ -22,34 +22,33 @@
 
     <main>
         <h2>Enter the item to put in the fridge:</h2>
-        <form method="post">
+        <form id="item-submit">
             <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" placeholder="Grocery Item Name"><br><br>
+            <input type="text" id="name" name="name" placeholder="Grocery Item Name" required><br><br>
 
             <label for="amount">Amount:</label><br>
-            <input type="number" id="amount" name="amount" placeholder="Amount of the Item"><br><br>
+            <input type="number" min="1" id="amount" name="amount" placeholder="Amount of the Item" required><br><br>
 
-            <label for="expiration-year">Expiration Year: </label><br>
-            <input type="text" id="expiration-year" name="expiration-year" placeholder="Expiration Year"><br><br>
+            <label for="expYear">Expiration Year: </label><br>
+            <input type="text" id="expYear" name="expYear" placeholder="Expiration Year" required><br><br>
 
-            <label for="expiration-month">Expiration Month: </label><br>
-            <input type="text" id="expiration-month" name="expiration-month" placeholder="Expiration Month"><br><br>
+            <label for="expMonth">Expiration Month: </label><br>
+            <input type="text" id="expMonth" name="expMonth" placeholder="Expiration Month" required><br><br>
 
-            <label for="expiration-day">Expiration Day: </label><br>
-            <input type="text" id="expiration-day" name="expiration-day" placeholder="Expiration Day"><br><br>
+            <label for="expDay">Expiration Day: </label><br>
+            <input type="text" id="expDay" name="expDay" placeholder="Expiration Day" required><br><br>
 
             <br>
             <br>
             <div class="center-button">
-                <button type="button" class="colored-button" onclick="addItemToInventory(event)">Add to
-                    Inventory</button>
+                <button type="submit" class="colored-button">Add to Inventory</button>
             </div>
 
         </form>
-        <button class="colored-button" onclick="getItems()">Log Data</button>
+        <!-- <button class="colored-button" onclick="populateInventoryList()">Print Fridge Inventory</button> -->
 
-        <!-- <h2>Items in Inventory:</h2>
-        <ul id="inventoryList"></ul> -->
+        <h2>Items in Inventory:</h2>
+        <ul id="inventory-list"></ul>
     </main>
     <script src="/js/itemService.js"></script>
 
