separated service code from frontend code and created fridge page to show items

--- a/inventory.html
+++ b/inventory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fridge Finder</title>
+    <title>FridgeFolio</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -15,7 +15,8 @@
                     alt="fridge icon"></a>
             <div class="desktop-menu">
                 <a href="inventory.html" class="menu-item">Inventory</a>
-                <a href="database.html" class="menu-item">, Database</a>
+                <a>, </a>
+                <a href="fridge.html" class="menu-item"> Fridge</a>
             </div>
         </nav>
     </header>
@@ -50,7 +51,8 @@
         <h2>Items in Inventory:</h2>
         <ul id="inventory-list"></ul>
     </main>
-    <script src="/js/itemService.js"></script>
+    <!-- <script src="/js/itemService.js"></script> -->
+    <script type="module" src="/js/inventory.js"></script>
 
 </body>
 
