--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="menu-item logo"><img src="img/fridge-icon.png" class="logo"
+            <a href="index.html" class="menu-item logo"><img src="img/fridge-icon(1).png" class="logo"
                     alt="fridge icon"></a>
             <div class="desktop-menu">
                 <a href="inventory.html" class="menu-item">Inventory</a>
+                <a>, </a>
+                <a href="fridge.html" class="menu-item">Fridge</a>
 
             </div>
         </nav>
