Updated fridge page UI to be more intuitive for users

--- a/fridge.html
+++ b/fridge.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fridge</title>
     <link rel="stylesheet" href="css/fridge.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     </nav>
 
     <h2 id="item-list-title">Items in Inventory:</h2>
-    <ol id="inventory-list"></ol>
+    <ul id="inventory-list"></ul>
 
     <script type="module" src="/js/fridge.js"></script>
 </body>
