--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fridge Finder</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="index.html" class="menu-item logo"><img src="img/fridge-icon(1).png" class="logo"
-                    alt="fridge icon"></a>
-            <div class="desktop-menu">
-                <a href="inventory.html" class="menu-item">Inventory</a>
-                <a>, </a>
-                <a href="fridge.html" class="menu-item">Fridge</a>
+    <nav>
+        <a href="index.html" class="menu-item"><img src="img/fridge-icon(1).png" class="logo" alt="fridge icon"></a>
+        <h2 id="website-title">FridgeFolio</h2>
+        <div class="desktop-menu">
+            <a href="inventory.html" class="menu-item">Inventory</a>
+            <!-- <a>, </a> -->
+            <a href="fridge.html" class="menu-item">Fridge</a>
 
-            </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <main>
         <div class="shelf">
             <h1 class="shelf-name">Shelf 1</h1>
