added minor details to fridge UI page and added log in to index page

--- a/fridge.html
+++ b/fridge.html
@@ -19,6 +19,14 @@
     </nav>
 
     <h2 id="item-list-title">Items in Inventory:</h2>
+
+    <ul id="color-key">
+        <li class="color-key-item">Expires Today: <img class="color-block" src="/img/last-day.png" alt="block of red" />
+        </li>
+        <li class="color-key-item">Expired: <img class="color-block" src="/img/expired.png" alt="block of red" />
+        </li>
+    </ul>
+
     <ul id="inventory-list"></ul>
 
     <script type="module" src="/js/fridge.js"></script>
