Implemented frontend update method in fridge page

--- a/fridge.html
+++ b/fridge.html
@@ -21,9 +21,10 @@
     <h2 id="item-list-title">Items in Inventory:</h2>
 
     <ul id="color-key">
-        <li class="color-key-item">Expires Today: <img class="color-block" src="/img/last-day.png" alt="block of red" />
+        <li class="color-key-item">Expires Today: <img class="color-block" src="/img/last-day.png"
+                alt="yellow circle" />
         </li>
-        <li class="color-key-item">Expired: <img class="color-block" src="/img/expired.png" alt="block of red" />
+        <li class="color-key-item">Expired: <img class="color-block" src="/img/expired.png" alt="red circle" />
         </li>
     </ul>
 
