--- a/fridge.html
+++ b/fridge.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FridgeFolio</title>
+    <link rel="icon" href="/img/fridge-logo.png" type="image/png">
     <link rel="stylesheet" href="css/fridge.css" />
     <link rel="stylesheet" href="css/navbar.css" />
 </head>
 
 <body>
     <nav>
-        <a href="index.html" class="logo"><img src="img/fridge-icon(1).png" class="logo" alt="fridge icon"></a>
+        <a href="index.html" class="logo"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
             <a href="inventory.html" class="menu-item">Add Item</a>
         </div>
     </nav>
 
-    <h2 id="item-list-title">Items in Inventory:</h2>
+    <h2 id="item-list-title">What's In My Fridge:</h2>
 
     <ul id="color-key">
         <li class="color-key-item">Expires Today: <img class="color-block" src="/img/last-day.png"
