--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FridgeFolio</title>
+    <link rel="icon" href="/img/fridge-logo.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/navbar.css" />
 </head>
 
 <body>
     <nav>
-        <a href="index.html"><img src="img/fridge-icon(1).png" class="logo" alt="fridge icon"></a>
+        <a href="index.html"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
             <a href="inventory.html" class="menu-item">Add Item</a>
