--- a/inventory.html
+++ b/inventory.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FridgeFolio</title>
+    <link rel="icon" href="/img/fridge-logo.png" type="image/png">
     <link rel="stylesheet" href="css/inventory.css" />
     <link rel="stylesheet" href="css/navbar.css" />
 </head>
 
 <body>
     <nav>
-        <a href="index.html"><img src="img/fridge-icon(1).png" class="logo" alt="fridge icon"></a>
+        <a href="index.html"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
             <a href="fridge.html" class="menu-item"> Fridge</a>
@@ -34,9 +35,13 @@
                 <input type="date" id="expDate" name="expDate" required>
             </div>
             <button type="submit" id="submit-btn">Add to Inventory</button>
-
         </form>
     </main>
+
+    <h2 id="item-list-title">Recently Added:</h2>
+
+    <ul id="recently-added"></ul>
+
     <script type="module" src="/js/inventory.js"></script>
 
 </body>
