--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="desktop-menu">
             <a href="inventory.html" class="menu-item">Add Item</a>
             <a href="fridge.html" class="menu-item">Fridge</a>
+            <a href="deleted.html" class="menu-item">Trash Can</a>
         </div>
     </nav>
     <main>
