Add Trash link to fridge page and modify its title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="desktop-menu">
             <a href="inventory.html" class="menu-item">Add Item</a>
             <a href="fridge.html" class="menu-item">Fridge</a>
-            <a href="trash.html" class="menu-item">Trash Can</a>
+            <a href="trash.html" class="menu-item">Trash</a>
         </div>
     </nav>
     <main>
