--- a/fridge.html
+++ b/fridge.html
@@ -16,6 +16,7 @@
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
             <a href="inventory.html" class="menu-item">Add Item</a>
+            <a href="trash.html" class="menu-item">Trash</a>
         </div>
     </nav>
 
