Redesign Home Page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav>
+    <!-- <nav>
         <a href="index.html"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
@@ -19,7 +19,7 @@
             <a href="fridge.html" class="menu-item">Fridge</a>
             <a href="deleted.html" class="menu-item">Trash Can</a>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- Login Form -->
     <main>
@@ -28,7 +28,7 @@
         </div>
         <div class="login-area">
             <form id="loginform" class="all-forms">
-                <h2>Login</h2>
+                <h2>Welcome Back!</h2>
                 <label for="username">Username:</label><br>
                 <input type="text" id="username" name="username" placeholder="Enter your username" required><br><br>
 
@@ -43,7 +43,7 @@
 
             <!-- Create Account Form -->
             <form id="createAccountForm" class="all-forms" style="display: none;">
-                <h2>Create Account</h2>
+                <h2>Welcome</h2>
                 <label for="newUsername">Username:</label><br>
                 <input type="text" id="newUsername" name="newUsername" placeholder="Enter your new username"
                     required><br><br>
@@ -64,8 +64,8 @@
 
             <!-- Logout Button -->
             <form id="logoutSection" class="all-forms" style="display: none;">
-                <h2>Welcome to FridgeFolio!</h2>
-                <p>You are now logged in.</p>
+                <h2>Come Back Soon!</h2>
+                <p style="margin-bottom: 30px">You are currently logged in.</p>
                 <button class="login-state-button" type="button" onclick="logOut()">Logout</button>
             </form>
         </div>
