--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </main>
 
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
