Implemenent log out functionality

--- a/inventory.html
+++ b/inventory.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <a href="index.html"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
+        <a href="profile.html" class="logo"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
             <a href="fridge.html" class="menu-item"> Fridge</a>
