Implement logged out redirect functionality

--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
         </form>
     </main>
 
-    <script src="js/proflle.js"></script>
+    <script type="module" src="js/proflle.js"></script>
 </body>
 
 </html>
