Add user profile to profile page

--- a/fridge.html
+++ b/fridge.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
 
-    <h2 id="item-list-title">What's In My Fridge:</h2>
+    <h2 id="item-list-title"></h2>
 
     <ul id="color-key">
         <li class="color-key-item">Expires Today: <img class="color-block" src="/img/last-day.png"
