--- a/inventory.html
+++ b/inventory.html
@@ -16,6 +16,7 @@
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
             <a href="fridge.html" class="menu-item"> Fridge</a>
+            <a href="trash.html" class="menu-item">Trash</a>
         </div>
     </nav>
 
