--- a/trash.html
+++ b/trash.html
@@ -15,6 +15,7 @@
         <a href="profile.html" class="logo"><img src="img/fridge-icon.png" class="logo" alt="fridge icon"></a>
         <h2 id="website-title">FridgeFolio</h2>
         <div class="desktop-menu">
+            <a href="inventory.html" class="menu-item">Add Item</a>
             <a href="fridge.html" class="menu-item">Fridge</a>
         </div>
     </nav>
