--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
         <div class="desktop-menu">
             <a href="inventory.html" class="menu-item">Add Item</a>
             <a href="fridge.html" class="menu-item">Fridge</a>
-            <a href="deleted.html" class="menu-item">Trash</a>
+            <a href="trash.html" class="menu-item">Trash</a>
         </div>
     </nav>
 
