--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,6 @@
     <title>FridgeFolio</title>
     <link rel="icon" href="/img/fridge-logo.png" type="image/png">
     <link rel="stylesheet" href="css/navbar.css" />
-    <!-- <link rel="stylesheet" href="css/styles.css" /> -->
     <link rel="stylesheet" href="css/profile.css" />
 </head>
 
@@ -22,15 +21,14 @@
         </div>
     </nav>
 
-    <div id="user-profile">
-        <h3>Account Information</h3>
-        <p id="username"></p>
-        <!-- <strong> -->
-        <p id="user-id"></p>
-        <!-- </strong> -->
-        <!-- <strong> -->
-        <p id="user-createdAt"></p>
-        <!-- </strong> -->
+    <div id="account-features">
+        <div id="user-profile">
+            <h3>Account Information</h3>
+            <p id="username"></p>
+            <p id="user-id"></p>
+            <p id="user-createdAt"></p>
+        </div>
+        <button id="account-delete-button" onclick="deleteUserAndLogOut()">Delete account</button>
     </div>
 
     <main>
