Created search bar for fridge

--- a/fridge.html
+++ b/fridge.html
@@ -20,6 +20,11 @@
         </div>
     </nav>
 
+    <div id="search-container">
+        <input type="text" id="search-bar" placeholder="Search items..." />
+    </div>
+    
+
     <h2 id="item-list-title"></h2>
 
     <ul id="color-key">
